# trade-decsup

./: .gitignore  README.md  backtest_report.html  deploy_railway.md  macro_state.schema.json  pyproject.toml  requirements.txt  setup_openclaw.sh  trade_decision_support.md
config/: assets.yaml  connectors.yaml  events.yaml  scoring.yaml
dss/: __init__.py  cli.py  config.py
dss/backtest/: __init__.py  data_loader.py  html_report.py  metrics.py  replay.py  report.py  simulator.py
dss/connectors/: __init__.py  base.py  binance_futures.py  defillama.py  derivatives.py  macro.py  news.py  onchain.py  options.py  price.py  sentiment.py
dss/engine/: __init__.py  decision.py  event_calendar.py  scorer.py  setup_detector.py  veto.py
dss/features/: __init__.py  acceptance.py  flow_features.py  mamis.py  options_features.py  pivots.py  stage.py  trend_state.py  trendlines.py  wyckoff.py  zones.py
dss/gates/: __init__.py  flow_gate.py  macro_gate.py  structure_gate.py
dss/models/: __init__.py  alert.py  flow_state.py  macro_state.py  position.py  setup.py  structure_state.py
dss/storage/: __init__.py  database.py  export.py  repository.py
dss/utils/: __init__.py  math.py  timeframes.py
openclaw/: AGENTS.md  BRAIN.md  CLIENTS.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md  PLAYBOOK.md  SOUL.md  TOOLS.md  USER.md
openclaw/skills/trade-dss/: SKILL.md
