[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trade-dss"
version = "0.1.0"
description = "Multi-Asset Swing Trading Decision Support System"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.6",
    "pydantic-settings>=2.1",
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.12",
    "ccxt>=4.2",
    "yfinance>=0.2.36",
    "httpx>=0.27",
    "sqlalchemy>=2.0",
    "pyyaml>=6.0",
    "ta>=0.11",
]

[project.scripts]
dss = "dss.cli:app"

[tool.setuptools.packages.find]
include = ["dss*"]
